RegisteringAndLogging
