# SklepInternetowy/SklepInternetowy/OpenAPIs/swagger3.json
@@ -745,6 +745,106 @@
         }
       }
     },
+    "/api/Konto/register": {
+      "post": {
+        "tags": [
+          "Konto"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RegisterUserDto"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RegisterUserDto"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/RegisterUserDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/Konto/login": {
+      "post": {
+        "tags": [
+          "Konto"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LoginDto"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LoginDto"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/LoginDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Konto": {
+      "delete": {
+        "tags": [
+          "Konto"
+        ],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/MetodaPlatnoscis": {
       "get": {
         "tags": [
@@ -2125,19 +2225,19 @@
           },
           "ktoZmodyfikowalNavigation": {
             "$ref": "#/components/schemas/Uzytkownik"
-          },
-          "sesjaKoszykas": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/SesjaKoszyka"
-            },
+          }
+        },
+        "additionalProperties": false
+      },
+      "LoginDto": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
             "nullable": true
           },
-          "zamowienies": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/Zamowienie"
-            },
+          "password": {
+            "type": "string",
             "nullable": true
           }
         },
@@ -2161,6 +2261,46 @@
             "items": {
               "$ref": "#/components/schemas/Zamowienie"
             },
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "RegisterUserDto": {
+        "type": "object",
+        "properties": {
+          "imie": {
+            "type": "string",
+            "nullable": true
+          },
+          "nazwisko": {
+            "type": "string",
+            "nullable": true
+          },
+          "email": {
+            "type": "string",
+            "nullable": true
+          },
+          "password": {
+            "type": "string",
+            "nullable": true
+          },
+          "confirmPassword": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "RolaUzytkownika": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "name": {
+            "type": "string",
             "nullable": true
           }
         },
@@ -2282,25 +2422,6 @@
               "$ref": "#/components/schemas/ElementKoszyka"
             },
             "nullable": true
-          },
-          "idKategoriiNavigation": {
-            "$ref": "#/components/schemas/Kategorium"
-          },
-          "ktoDodalNavigation": {
-            "$ref": "#/components/schemas/Uzytkownik"
-          },
-          "ktoUsunalNavigation": {
-            "$ref": "#/components/schemas/Uzytkownik"
-          },
-          "ktoZmodyfikowalNavigation": {
-            "$ref": "#/components/schemas/Uzytkownik"
-          },
-          "towarZamowienia": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/TowarZamowienium"
-            },
-            "nullable": true
           }
         },
         "additionalProperties": false
@@ -2364,11 +2485,22 @@
             "format": "date-time",
             "nullable": true
           },
-          "login": {
+          "email": {
             "maxLength": 50,
             "minLength": 0,
             "type": "string",
             "nullable": true
+          },
+          "zahaszowaneHaslo": {
+            "type": "string",
+            "nullable": true
+          },
+          "rolaUzytkownika": {
+            "$ref": "#/components/schemas/RolaUzytkownika"
+          },
+          "rolaUzytkownikaId": {
+            "type": "integer",
+            "format": "int32"
           },
           "adreKtoDodalNavigations": {
             "type": "array",
